project_milestone4/pr4_solution/TackParser.java
// Generated from Tack.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TackParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, BOOL=13, ELSE=14, FOR=15, FUN=16, IF=17, 
		IN=18, INT=19, STRING=20, VOID=21, WHILE=22, CALL=23, GOTO=24, IFFALSE=25, 
		PARAM=26, RETURN=27, SIZEOF=28, ARROW=29, DOT=30, COLON=31, COLONEQ=32, 
		COMMA=33, EQ=34, SEMI=35, LBRACKET=36, RBRACKET=37, LCURLY=38, RCURLY=39, 
		LPAREN=40, RPAREN=41, LOGIC_OR_OP=42, LOGIC_AND_OP=43, BOOL_LIT=44, NULL_LIT=45, 
		ID=46, INT_LIT=47, STRING_LIT=48, WS=49, NEWLINE=50, COMMENT=51;
	public static final int
		RULE_program = 0, RULE_funDef = 1, RULE_funDefList = 2, RULE_funDefListTail = 3, 
		RULE_type = 4, RULE_arrayType = 5, RULE_recordType = 6, RULE_fieldTypeList = 7, 
		RULE_fieldTypeListTail = 8, RULE_fieldType = 9, RULE_boolType = 10, RULE_intType = 11, 
		RULE_stringType = 12, RULE_funType = 13, RULE_returnType = 14, RULE_voidType = 15, 
		RULE_stmt = 16, RULE_varDef = 17, RULE_assignStmt = 18, RULE_blockStmt = 19, 
		RULE_callStmt = 20, RULE_forStmt = 21, RULE_ifStmt = 22, RULE_returnStmt = 23, 
		RULE_whileStmt = 24, RULE_stmtList = 25, RULE_stmtListTail = 26, RULE_expr = 27, 
		RULE_logicOrExpr = 28, RULE_logicOrExprTail = 29, RULE_logicAndExpr = 30, 
		RULE_logicAndExprTail = 31, RULE_eqExpr = 32, RULE_eqExprTail = 33, RULE_relExpr = 34, 
		RULE_relExprTail = 35, RULE_addExpr = 36, RULE_addExprTail = 37, RULE_multExpr = 38, 
		RULE_multExprTail = 39, RULE_prefixExpr = 40, RULE_postfixExpr = 41, RULE_postfixExprTail = 42, 
		RULE_emptyPostfixTail = 43, RULE_callExpr = 44, RULE_callActuals = 45, 
		RULE_callExprTail = 46, RULE_castExprTail = 47, RULE_fieldExprTail = 48, 
		RULE_subscriptExprTail = 49, RULE_exprList = 50, RULE_exprListTail = 51, 
		RULE_primExpr = 52, RULE_parenExpr = 53, RULE_arrayLit = 54, RULE_recordLit = 55, 
		RULE_fieldLitList = 56, RULE_fieldLitListTail = 57, RULE_fieldLit = 58, 
		RULE_boolLit = 59, RULE_intLit = 60, RULE_nullLit = 61, RULE_stringLit = 62, 
		RULE_fieldId = 63, RULE_funId = 64, RULE_varId = 65, RULE_eqOp = 66, RULE_relOp = 67, 
		RULE_addOp = 68, RULE_multOp = 69, RULE_prefixOp = 70, RULE_irProgram = 71, 
		RULE_irFunDefList = 72, RULE_irFunDefListTail = 73, RULE_irFunDef = 74, 
		RULE_irStmtList = 75, RULE_irStmtListTail = 76, RULE_irStmt = 77, RULE_labelColonList = 78, 
		RULE_labelColon = 79, RULE_label = 80, RULE_addr = 81, RULE_nameAddr = 82, 
		RULE_constAddr = 83, RULE_tempAddr = 84, RULE_sizeofAddr = 85, RULE_irInstr = 86, 
		RULE_leftFactoredInstr = 87, RULE_arrWriteInstr = 88, RULE_recWriteInstr = 89, 
		RULE_uncondJumpInstr = 90, RULE_trueJumpInstr = 91, RULE_falseJumpInstr = 92, 
		RULE_relopJumpInstr = 93, RULE_paramInstr = 94, RULE_callInstr = 95, RULE_returnInstr = 96, 
		RULE_irInfixOp = 97, RULE_irPrefixOp = 98, RULE_irRelOp = 99, RULE_irId = 100;
	public static final String[] ruleNames = {
		"program", "funDef", "funDefList", "funDefListTail", "type", "arrayType", 
		"recordType", "fieldTypeList", "fieldTypeListTail", "fieldType", "boolType", 
		"intType", "stringType", "funType", "returnType", "voidType", "stmt", 
		"varDef", "assignStmt", "blockStmt", "callStmt", "forStmt", "ifStmt", 
		"returnStmt", "whileStmt", "stmtList", "stmtListTail", "expr", "logicOrExpr", 
		"logicOrExprTail", "logicAndExpr", "logicAndExprTail", "eqExpr", "eqExprTail", 
		"relExpr", "relExprTail", "addExpr", "addExprTail", "multExpr", "multExprTail", 
		"prefixExpr", "postfixExpr", "postfixExprTail", "emptyPostfixTail", "callExpr", 
		"callActuals", "callExprTail", "castExprTail", "fieldExprTail", "subscriptExprTail", 
		"exprList", "exprListTail", "primExpr", "parenExpr", "arrayLit", "recordLit", 
		"fieldLitList", "fieldLitListTail", "fieldLit", "boolLit", "intLit", "nullLit", 
		"stringLit", "fieldId", "funId", "varId", "eqOp", "relOp", "addOp", "multOp", 
		"prefixOp", "irProgram", "irFunDefList", "irFunDefListTail", "irFunDef", 
		"irStmtList", "irStmtListTail", "irStmt", "labelColonList", "labelColon", 
		"label", "addr", "nameAddr", "constAddr", "tempAddr", "sizeofAddr", "irInstr", 
		"leftFactoredInstr", "arrWriteInstr", "recWriteInstr", "uncondJumpInstr", 
		"trueJumpInstr", "falseJumpInstr", "relopJumpInstr", "paramInstr", "callInstr", 
		"returnInstr", "irInfixOp", "irPrefixOp", "irRelOp", "irId"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'!'", "'bool'", "'else'", "'for'", "'fun'", "'if'", "'in'", 
		"'int'", "'string'", "'void'", "'while'", "'call'", "'goto'", "'ifFalse'", 
		"'param'", "'return'", "'sizeof'", "'->'", "'.'", "':'", "':='", "','", 
		"'='", "';'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'||'", "'&&'", 
		null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "BOOL", "ELSE", "FOR", "FUN", "IF", "IN", "INT", "STRING", "VOID", 
		"WHILE", "CALL", "GOTO", "IFFALSE", "PARAM", "RETURN", "SIZEOF", "ARROW", 
		"DOT", "COLON", "COLONEQ", "COMMA", "EQ", "SEMI", "LBRACKET", "RBRACKET", 
		"LCURLY", "RCURLY", "LPAREN", "RPAREN", "LOGIC_OR_OP", "LOGIC_AND_OP", 
		"BOOL_LIT", "NULL_LIT", "ID", "INT_LIT", "STRING_LIT", "WS", "NEWLINE", 
		"COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tack.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TackParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program v;
		public FunDefListContext fs;
		public TerminalNode EOF() { return getToken(TackParser.EOF, 0); }
		public FunDefListContext funDefList() {
			return getRuleContext(FunDefListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			((ProgramContext)_localctx).fs = funDefList();
			setState(203);
			match(EOF);
			((ProgramContext)_localctx).v =  new Program(new Location(_localctx), ((ProgramContext)_localctx).fs.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefContext extends ParserRuleContext {
		public FunDef v;
		public FunIdContext i;
		public FunTypeContext t;
		public BlockStmtContext b;
		public TerminalNode EQ() { return getToken(TackParser.EQ, 0); }
		public TerminalNode FUN() { return getToken(TackParser.FUN, 0); }
		public FunIdContext funId() {
			return getRuleContext(FunIdContext.class,0);
		}
		public FunTypeContext funType() {
			return getRuleContext(FunTypeContext.class,0);
		}
		public BlockStmtContext blockStmt() {
			return getRuleContext(BlockStmtContext.class,0);
		}
		public FunDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDef; }
	}

	public final FunDefContext funDef() throws RecognitionException {
		FunDefContext _localctx = new FunDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			((FunDefContext)_localctx).i = funId();
			setState(207);
			match(EQ);
			setState(208);
			match(FUN);
			setState(209);
			((FunDefContext)_localctx).t = funType();
			setState(210);
			((FunDefContext)_localctx).b = blockStmt();
			((FunDefContext)_localctx).v =  new FunDef(new Location(_localctx), ((FunDefContext)_localctx).i.v, ((FunDefContext)_localctx).t.v, ((FunDefContext)_localctx).b.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefListContext extends ParserRuleContext {
		public FunDefListHead v;
		public FunDefContext h;
		public FunDefListTailContext t;
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public FunDefListTailContext funDefListTail() {
			return getRuleContext(FunDefListTailContext.class,0);
		}
		public FunDefListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefList; }
	}

	public final FunDefListContext funDefList() throws RecognitionException {
		FunDefListContext _localctx = new FunDefListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDefList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			((FunDefListContext)_localctx).h = funDef();
			setState(214);
			((FunDefListContext)_localctx).t = funDefListTail();
			((FunDefListContext)_localctx).v =  new FunDefListHead(new Location(_localctx), ((FunDefListContext)_localctx).h.v, ((FunDefListContext)_localctx).t.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefListTailContext extends ParserRuleContext {
		public FunDefListTail v;
		public FunDefContext h;
		public FunDefListTailContext t;
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public FunDefListTailContext funDefListTail() {
			return getRuleContext(FunDefListTailContext.class,0);
		}
		public FunDefListTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefListTail; }
	}
